# cosmic-ext-applet-emoji-selector

./: CLAUDE.md  CONFIG.md  Cargo.toml  README.md  justfile  prompt.md
.agent/: update_emoji_ordering.py
.claude/: settings.local.json
i18n/sv/: cosmic_applet_emoji_selector.ftl
scripts/: dumpOrdering.js  googleOrdering.js  googleOrdering.txt  unicodeOrdering.js  unicodeOrdering.txt
src/: app.rs  config.rs  google_ordering.rs  main.rs  utils.rs  window.rs
src/app/: nav.rs  style.rs
src/style_copy/: button.rs
src/widget_copy/: mod.rs
