[package]
name = "cosmic-applet-emoji-selector"
version = "0.1.4"
edition = "2021"

# not interested in these lints
[lints.clippy]
needless_return = "allow"
let_and_return = "allow"
too_many_arguments = "allow"
unusual_byte_groupings = "allow"
mixed_case_hex_literals = "allow"
needless_lifetimes = "allow"
type_complexity = "allow"
redundant_field_names = "allow"
uninlined_format_args = "allow"

[features]
wayland = []
a11y = []
default = ["wayland"]

[profile.release]


[dependencies]

i18n-embed = { version = "0.14.1", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.8.0"
rust-embed = "8.3.0"
serde = { version = "1.0.197", features = ["derive"] }
paste = "1.0.14"
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false, features = [
  "libcosmic",
  "once_cell",
] }

libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
  "applet",
  "tokio",
  "wayland",
  "clipboard",
] }
once_cell = "1.19.0"
emojis = {version = "0.6.3", features = ["serde"]}
regex = "1.10.4"
serde_json = "1.0.122"

bitflags = { version = "2.6.0", features = ["serde"] }
aho-corasick = "1.1.3"


fluent-langneg = "0.14.1"
